--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/favicon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,7 +18,7 @@
 
   <!-- Vendor CSS Files -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="assets/aos/aos.css" rel="stylesheet">
   <!-- <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
@@ -36,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Craftivo</h1>
+        <h1 class="sitename">SPH SHUVO</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -78,7 +78,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/profile/profile-bg-5.webp" alt="" data-aos="fade-in">
+      <img src="assets/img/profile/sph.webp" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
@@ -114,11 +114,11 @@
             <div class="profile-card">
               <div class="profile-header">
                 <div class="profile-avatar">
-                  <img src="assets/img/profile/profile-square-3.webp" class="img-fluid" alt="">
+                  <img src="assets/img/favicon.webp" class="img-fluid" alt="">
                   <div class="status-indicator"></div>
                 </div>
-                <h3>Jordan Mitchell</h3>
-                <span class="role">Full Stack Developer</span>
+                <h3>Sph Shuvo</h3>
+                <span class="role">PRO. Photographer</span>
                 <div class="rating">
                   <i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i>
@@ -445,19 +445,20 @@
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Services</span>
         <h2>Services</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eveniet pariatur eos esse corrupti voluptas quos optio corporis incidunt fugit, voluptate quam minus possimus quis nesciunt cumque laudantium praesentium ipsam?</p>
+        <p>I am a professional photographer dedicated to capturing life’s most memorable moments with creativity, precision, and passion. With experience in photography and cinematography, I offer a wide range of services including weddings, corporate events, birthdays, fashion, and product photography. Every project is approached with a unique artistic vision to ensure stunning visuals that tell your story. My goal is to preserve memories in a way that is both visually beautiful and emotionally meaningful. Each photograph and video is crafted meticulously to reflect the essence of the moment. Trust me to transform your special moments into timeless visual stories.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
-            <div class="service-item">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-palette"></i>
+                <i class="bi bi-camera"></i>
               </div>
-              <h4>Brand Identity</h4>
-              <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus vivamus magna.</p>
+              <h4>Photography</h4>
+              <p>Professional photography services capturing moments with creativity and precision.From portraits to events, we frame every shot beautifully.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -469,10 +470,10 @@
             <div class="service-item featured">
               <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-layout-text-window-reverse"></i>
+                <i class="bi bi-camera-reels"></i>
               </div>
-              <h4>UI/UX Design</h4>
-              <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui donec rutrum.</p>
+              <h4>Cinematography</h4>
+              <p>High-quality video production to tell your story with cinematic flair.We create visually stunning films for events, promotions, or personal projects.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -481,12 +482,13 @@
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-            <div class="service-item">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-code-slash"></i>
+                <i class="bi bi-people"></i>
               </div>
-              <h4>Development</h4>
-              <p>Praesent sapien massa convallis a pellentesque nec egestas non nisi cras ornare arcu.</p>
+              <h4>Corporate Program Photography</h4>
+              <p>Coverage of corporate events, conferences, and seminars with a professional touch.We capture the essence of your corporate gatherings and networking moments.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -495,12 +497,13 @@
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-            <div class="service-item">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-phone"></i>
+                <i class="bi bi-heart-fill"></i>
               </div>
-              <h4>Mobile Apps</h4>
-              <p>Vivamus suscipit tortor eget felis porttitor volutpat quisque velit nisi pretium ut lacinia.</p>
+              <h4>Wedding Photography</h4>
+              <p>Preserving the magical moments of your special day in timeless photographs.From candid to posed shots, we ensure every memory is beautifully documented.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -509,12 +512,13 @@
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
-            <div class="service-item">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
               <div class="icon-wrapper">
-                <i class="bi bi-megaphone"></i>
+                <i class="bi bi-cake"></i>
               </div>
-              <h4>Digital Marketing</h4>
-              <p>Nulla porttitor accumsan tincidunt curabitur aliquet quam id dui posuere blandit mauris.</p>
+              <h4>Birthday & Celebration Photography</h4>
+              <p>Capturing smiles, laughter, and joyous moments of birthdays and parties.We focus on creating vibrant and memorable images for your celebrations.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -525,10 +529,10 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-search"></i>
+                <i class="bi bi-calendar-event"></i>
               </div>
-              <h4>SEO Services</h4>
-              <p>Pellentesque in ipsum id orci porta dapibus donec sollicitudin molestie malesuada proin.</p>
+              <h4>Event & Function Photography</h4>
+              <p>Professional coverage for concerts, cultural events, or private functions.We deliver high-quality visuals that highlight every key moment.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -539,10 +543,10 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="icon-wrapper">
-                <i class="bi bi-graph-up-arrow"></i>
+                <i class="bi bi-box-seam"></i>
               </div>
-              <h4>Analytics</h4>
-              <p>Sed porttitor lectus nibh curabitur arcu erat accumsan id imperdiet et porttitor at sem.</p>
+              <h4>Product & Commercial Photography</h4>
+              <p>Showcase your products or services with sharp, high-quality images.Perfect for e-commerce, marketing campaigns, and brand promotion.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -551,12 +555,61 @@
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
+              <div class="icon-wrapper">
+                <i class="bi bi-journal-text"></i>
+              </div>
+              <h4>Event Documentary</h4>
+              <p>Capture every moment of your event with a storytelling approach.We document candidly and professionally to preserve memories with impact.</p>
+              <a href="service-details.html" class="read-more">
+                <span>Explore</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="icon-wrapper">
                 <i class="bi bi-shield-check"></i>
               </div>
-              <h4>Security</h4>
-              <p>Vivamus magna justo lacinia eget consectetur sed convallis at tellus mauris blandit aliquet.</p>
+              <h4>Travel & Landscape Photography</h4>
+              <p>Showcasing breathtaking locations and scenic beauty through the lens.We capture nature, architecture, and culture with creative perspectives.</p>
+              <a href="service-details.html" class="read-more">
+                <span>Explore</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
+              <div class="icon-wrapper">
+                <i class="bi bi-stars"></i>
+              </div>
+              <h4>Fashion & Portfolio Photography</h4>
+              <p>Professional fashion shoots for models, influencers, or personal branding.High-quality images that highlight style, elegance, and personality.</p>
+              <a href="service-details.html" class="read-more">
+                <span>Explore</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="service-item featured">
+              <div class="featured-tag">Featured</div>
+              <div class="icon-wrapper">
+                <i class="bi bi-gem"></i>
+              </div>
+              <h4>Engagement & Pre-Wedding Shoots</h4>
+              <p>Capture the love and excitement before the big day with stunning visuals.We create romantic and memorable images that tell your unique story.</p>
               <a href="service-details.html" class="read-more">
                 <span>Explore</span>
                 <i class="bi bi-arrow-right"></i>
@@ -822,29 +875,35 @@
               </div>
               <div>
                 <h3>Address</h3>
-                <p>2847 Oak Street, San Francisco, CA 94102</p>
+                <p>H#14, R#10, South Banasree, Dhaka 1214</p>
               </div>
             </div>
 
-            <div class="info-item">
+            <a href="tel:+8801615195498" style="text-decoration:none; color:inherit;">
+              <div class="info-item">
               <div class="icon-wrapper">
                 <i class="bi bi-telephone"></i>
               </div>
               <div>
                 <h3>Call Me</h3>
-                <p>+1 (555) 234-5678</p>
+                <p>+8801615195498</p>
               </div>
             </div>
+            </a>
+            
 
-            <div class="info-item">
-              <div class="icon-wrapper">
-                <i class="bi bi-envelope"></i>
+            <a href="mailto:mradi4870@.com" style="text-decoration:none; color:inherit;">
+              <div class="info-item">
+                <div class="icon-wrapper">
+                  <i class="bi bi-envelope"></i>
+                </div>
+                <div>
+                  <h3>Email Me</h3>
+                  <p>mradi4870@.com</p>
+                </div>
               </div>
-              <div>
-                <h3>Email Me</h3>
-                <p>alex@example.com</p>
-              </div>
-            </div>
+            </a>
+            
 
           </div>
 
@@ -894,7 +953,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Craftivo</span>
+            <span class="sitename">SPH SHUVO</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -929,25 +988,19 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info@example.com</span></p>
+          <p>House 14, Road 10</p>
+          <p>South Banasree,Dhaka 1214</p>
+          <p>Bangladesh</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+8801615195498</span></p>
+          <p><strong>Email:</strong> <span>mradi4870@.com</span></p>
         </div>
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Craftivo</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <p>© <span>Copyright 2025 | </span> <strong class="px-1 sitename">Sph</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">Designed by <a href="https://prothesbarai.github.io/">Engr Prothes</a></div>
     </div>
 
   </footer>
@@ -958,21 +1011,18 @@
   <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+  <!-- JS Files -->
+   <script src="assets/aos/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
-  <script src="assets/aos/aos.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 
-  <!-- Main JS File -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.1/js/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
+  <script src="assets/js/validate.js"></script>
   <script src="js/main.js"></script>
 
 </body>
-
 </html>
