--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
 
   <!-- Main CSS File -->
   <link href="css/main.css" rel="stylesheet">
+  <link href="../css/whatsapp.css" rel="stylesheet">
 
 </head>
 
 <body class="index-page">
+
+  <!-- Floating Whatsapp -->
+    <div class="floating_whatsapp" id="mydiv">
+        <a href="https://wa.me/01615195498" target="_blank">
+            <img src="../assets/img/services/whatsapp.png" alt="Whatsapp" class="pulsing-2" id="mydivheader">
+        </a>
+    </div>
+  <!-- Floating Whatsapp --> 
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
@@ -74,9 +83,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-
       <img src="assets/img/profile/sph.webp" alt="" data-aos="fade-in">
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
@@ -101,7 +108,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, porro iste eligendi, veritatis a doloremque, minima quasi excepturi inventore laboriosam recusandae laudantium esse. Facere, itaque excepturi? Omnis animi consequuntur iusto.</p>
+        <p>I'm Professional Photographer & Cinematographer capturing the art of real moments with creativity and precision. Specializing in portraits, commercial projects, and cinematic storytelling that resonates with audiences and leaves a lasting impression.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -179,9 +186,9 @@
             <div class="content-wrapper">
               <div class="bio-section">
                 <div class="section-tag">About Me</div>
-                <h2>Transforming Ideas into Digital Reality</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem blanditiis sunt magni consectetur odio similique architecto sit nemo vitae, vero, quos placeat quaerat. Quaerat qui veritatis laudantium et officiis est!</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam tempora distinctio aliquam nam ullam harum provident est magnam eius cupiditate autem nihil sequi incidunt necessitatibus, quam libero, asperiores ipsam?</p>
+                <h2>Crafting Visual Stories Through Lens & Light</h2>
+                <p>With over 7 years of my experience, the focus is translating ideas into compelling visual narratives. Each project—whether portrait, cinematic, or branded content—is approached with artistic vision and technical excellence to create memorable imagery.</p>
+                <p>My Passionate - about storytelling, attention to detail, and cinematic aesthetics, every frame to evoke emotion, and connect with the audience on a deeper level.</p>
               </div>
 
               <div class="details-grid">
@@ -214,7 +221,7 @@
                     <i class="bi bi-envelope"></i>
                     <div class="detail-content">
                       <span>Email</span>
-                      <strong>mailto:mradi4870@.com</strong>
+                      <strong>mradi4870@.com</strong>
                     </div>
                   </div>
                 </a>
@@ -510,7 +517,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Portfolio</span>
         <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>A curated collection of professional photography and cinematic projects, capturing moments that tell compelling stories.From creative portraits to branded and commercial visuals, every image is crafted with precision, emotion, and artistic vision.Explore the portfolio to experience a world where every frame reflects professionalism and creativity.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -707,11 +714,11 @@
         <div class="portfolio-bottom" data-aos="fade-up" data-aos-delay="400">
           <div class="row align-items-center">
             <div class="col-lg-8">
-              <h3>Like what you see?</h3>
-              <p>Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
+              <h3>Enjoy What You See?</h3>
+              <p>Explore the full gallery of professional photography and cinematic projects, showcasing portraits, commercial work, and creative visuals crafted with passion and precision.</p>
             </div>
             <div class="col-lg-4 text-lg-end">
-              <a href="#contact" class="btn btn-accent">Let's Work Together</a>
+              <a href="..//photo_gallery/photo_gallery.html" class="btn btn-accent" target="_blank">Show My All Gallery Photos</a>
             </div>
           </div>
         </div>
@@ -728,7 +735,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Contact</span>
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>For business queries, bookings, or collaboration requests.Specialized in professional photography and cinematic storytelling.Reach out to discuss projects, events, or creative opportunities.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -818,11 +825,12 @@
   <footer id="footer" class="footer">
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-5 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">SPH SHUVO</span>
+        <div class="col-lg-5 col-md-12 footer-about text-center text-lg-start text-md-start">
+          <a href="index.html" class="img-fluid mx-auto d-block align-items-center mb-2 ">
+            <img src="assets/img/logo.png" alt="SPH SHUVO" class="text-light" width="120px">
           </a>
           <p>“I capture the moments you live and turn them into memories that last beyond time. Every frame is crafted with emotion, creativity, and the story only you can tell.”</p>
+        
           <div class="social-links d-flex mt-4">
             <a href="https://x.com/sphshuvo?s=21" target="_blank"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/share/1DpbBzso2Z/?mibextid=wwXIfr" target="_blank"><i class="bi bi-facebook"></i></a>
