--- a/pages/about_page.html
+++ b/pages/about_page.html
@@ -24,10 +24,19 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/whatsapp.css" rel="stylesheet">
 
 </head>
 
 <body class="index-page">
+    <!-- Floating Whatsapp -->
+    <div class="floating_whatsapp" id="mydiv">
+        <a href="https://wa.me/01615195498" target="_blank">
+            <img src="../assets/img/services/whatsapp.png" alt="Whatsapp" class="pulsing-2" id="mydivheader">
+        </a>
+    </div>
+  <!-- Floating Whatsapp -->  
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
@@ -78,7 +87,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, porro iste eligendi, veritatis a doloremque, minima quasi excepturi inventore laboriosam recusandae laudantium esse. Facere, itaque excepturi? Omnis animi consequuntur iusto.</p>
+        <p>I'm Professional Photographer & Cinematographer capturing the art of real moments with creativity and precision. Specializing in portraits, commercial projects, and cinematic storytelling that resonates with audiences and leaves a lasting impression.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -156,9 +165,9 @@
             <div class="content-wrapper">
               <div class="bio-section">
                 <div class="section-tag">About Me</div>
-                <h2>Transforming Ideas into Digital Reality</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem blanditiis sunt magni consectetur odio similique architecto sit nemo vitae, vero, quos placeat quaerat. Quaerat qui veritatis laudantium et officiis est!</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam tempora distinctio aliquam nam ullam harum provident est magnam eius cupiditate autem nihil sequi incidunt necessitatibus, quam libero, asperiores ipsam?</p>
+                <h2>Crafting Visual Stories Through Lens & Light</h2>
+                <p>With over 7 years of my experience, the focus is translating ideas into compelling visual narratives. Each project—whether portrait, cinematic, or branded content—is approached with artistic vision and technical excellence to create memorable imagery.</p>
+                <p>My Passionate - about storytelling, attention to detail, and cinematic aesthetics, every frame to evoke emotion, and connect with the audience on a deeper level.</p>
               </div>
 
               <div class="details-grid">
@@ -439,15 +448,17 @@
   </main>
 
 
-    <!-- Footer -->
+
+  <!-- Footer -->
   <footer id="footer" class="footer">
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-5 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">SPH SHUVO</span>
+        <div class="col-lg-5 col-md-12 footer-about text-center text-lg-start text-md-start">
+          <a href="../index.html" class="img-fluid mx-auto d-block align-items-center mb-2 ">
+            <img src="../assets/img/logo.png" alt="SPH SHUVO" class="text-light" width="120px">
           </a>
           <p>“I capture the moments you live and turn them into memories that last beyond time. Every frame is crafted with emotion, creativity, and the story only you can tell.”</p>
+        
           <div class="social-links d-flex mt-4">
             <a href="https://x.com/sphshuvo?s=21" target="_blank"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/share/1DpbBzso2Z/?mibextid=wwXIfr" target="_blank"><i class="bi bi-facebook"></i></a>
