--- a/pages/service_page.html
+++ b/pages/service_page.html
@@ -24,10 +24,19 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
-
+  <link href="../css/whatsapp.css" rel="stylesheet">
 </head>
 
 <body class="index-page">
+
+  <!-- Floating Whatsapp -->
+    <div class="floating_whatsapp" id="mydiv">
+        <a href="https://wa.me/01615195498" target="_blank">
+            <img src="../assets/img/services/whatsapp.png" alt="Whatsapp" class="pulsing-2" id="mydivheader">
+        </a>
+    </div>
+  <!-- Floating Whatsapp --> 
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
@@ -277,15 +286,16 @@
 
 
 
-    <!-- Footer -->
+<!-- Footer -->
   <footer id="footer" class="footer">
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-5 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">SPH SHUVO</span>
+        <div class="col-lg-5 col-md-12 footer-about text-center text-lg-start text-md-start">
+          <a href="../index.html" class="img-fluid mx-auto d-block align-items-center mb-2 ">
+            <img src="../assets/img/logo.png" alt="SPH SHUVO" class="text-light" width="120px">
           </a>
           <p>“I capture the moments you live and turn them into memories that last beyond time. Every frame is crafted with emotion, creativity, and the story only you can tell.”</p>
+        
           <div class="social-links d-flex mt-4">
             <a href="https://x.com/sphshuvo?s=21" target="_blank"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/share/1DpbBzso2Z/?mibextid=wwXIfr" target="_blank"><i class="bi bi-facebook"></i></a>
