--- a/photo_gallery/photo_gallery.html
+++ b/photo_gallery/photo_gallery.html
@@ -13,13 +13,13 @@
 <body>
 
   <!-- Gallery Header -->
-   <h1 class="fw-bold text-primary mb-3"><i class="bi bi-camera-fill"></i> Photo Gallery <i class="bi bi-images"></i></h1>
+   <h1 class="fw-bold mb-3" style="color: #ff4d4f;"><i class="bi bi-camera-fill"></i> Photo Gallery <i class="bi bi-images"></i></h1>
 
 
   <!-- Per Page Image Show -->
   <div class="d-inline-flex align-items-center bg-light p-3 rounded-4 shadow-sm mb-5">
-    <label class="form-label mb-0 me-2 fw-semibold text-secondary">প্রতি পেজে ছবি সংখ্যা:</label>
-    <select id="perPageSelect" class="form-select form-select-sm w-auto">
+    <label class="form-label mb-0 me-2 fw-semibold" style="color: #ff4d4f;">প্রতি পেজে ছবি সংখ্যা:</label>
+    <select id="perPageSelect" class="form-select form-select-sm w-auto" style="color: #ff4d4f;">
       <option value="6">6</option>
       <option value="9">9</option>
       <option value="12" selected>12</option>
@@ -34,9 +34,9 @@
   <!-- Centered Loading Spinner -->
   <div id="loadingSpinner" class="justify-content-center align-items-center">
         <div class="spinner-border text-primary" role="status" style="width: 4rem; height: 4rem;">
-          <span class="visually-hidden">Loading...</span>
+          <span class="visually-hidden" style="color: #ff4d4f;">Loading...</span>
         </div>
-        <p class="mt-3 fw-semibold text-primary">Loading images...</p>
+        <p class="mt-3 fw-semibold" style="color: #ff4d4f;">Loading images...</p>
   </div> 
   
 
@@ -47,8 +47,8 @@
   <!-- Pagination -->
   <div class="d-flex justify-content-center align-items-center my-4">
     <button id="prevBtn" class="btn btn-outline-primary me-2"> <i class="fa-solid fa-arrow-left"></i> Previous</button>
-    <span id="pageInfo" class="mx-3 fw-bold"></span>
-    <button id="nextBtn" class="btn btn-outline-primary ms-2"> Next <i class="fa-solid fa-arrow-right"></i></button>
+    <span id="pageInfo" class="mx-3 fw-bold" style="color: #ff4d4f;"></span>
+    <button id="nextBtn" class="btn btn-outline-primary ms-2" > Next <i class="fa-solid fa-arrow-right"></i></button>
   </div>
 
 
